[Live Text] Image overlay text is misaligned on rfi.fr https://bugs.webkit.org/show_bug.cgi?id=235118
Reviewed by Aditya Keerthi.

Source/WebCore:

Reset any `text-indent` to 0 when injecting Live Text into image elements, to ensure that any `text-indent`
value set on the image doesn't propagate into UA shadow DOM content.

Test: fast/images/text-recognition/image-overlay-with-text-indent.html

* html/shadow/imageOverlay.css:
(div.image-overlay-line, .image-overlay-text, div.image-overlay-block):

LayoutTests:

Add a new test case to exercise the bug.

* fast/images/text-recognition/image-overlay-with-text-indent-expected.html: Added.
* fast/images/text-recognition/image-overlay-with-text-indent.html: Added.



Canonical link: https://commits.webkit.org/245972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287943 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/html/shadow/imageOverlay.css
+++ b/Source/WebCore/html/shadow/imageOverlay.css
@@ -29,6 +29,7 @@ div#image-overlay {
     overflow: hidden;
     color: transparent;
     text-shadow: none;
+    text-indent: 0;
     text-align: center;
     font-family: system-ui;
 }
